--- a/css/style.css
+++ b/css/style.css
@@ -6738,7 +6738,7 @@
 	.t-profile-01 .teacher-prolile-01 .t-profile-right .all-corsess-wapper .all-courses .profile__courses__inner ul li {
 	    margin-bottom: 15px;
 	    color: #333;
-	    font-size: 15px;
+	    font-size: 14px;
 	}
 	.t-profile-01 .teacher-prolile-01 .t-profile-right .all-corsess-wapper .all-courses .profile__courses__inner ul li:last-child {
 	    margin-bottom: 0;
@@ -9040,16 +9040,13 @@ i.red{
 
 /*popup*/
 
-#enquirypopup .modal-dialog {
-    width: 400px;
-    padding: 0px ;
-    position: relative;
-}
+
 
 #enquirypopup .modal-dialog {
-    width: 400px;
-    padding: 0px ;
+    width: 40%;
+    padding: 0px;
     position: relative;
+    margin: 0 auto;
 }
 #enquirypopup .modal-dialog:before {
     content: '';
@@ -9340,6 +9337,63 @@ i.red{
     -webkit-animation: blink normal 2s infinite ease-in-out; /* Webkit */
     -ms-animation: blink normal 2s infinite ease-in-out; /* IE */
     animation: blink normal 2s infinite ease-in-out; /* Opera and prob css3 final iteration */
+}
+
+
+.gallery-title
+{
+    font-size: 36px;
+    color: #42B32F;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 70px;
+}
+.gallery-title:after {
+    content: "";
+    position: absolute;
+    width: 7.5%;
+    left: 46.5%;
+    height: 45px;
+    border-bottom: 1px solid #5e5e5e;
+}
+.filter-button
+{
+    font-size: 18px;
+    border: 1px solid #42B32F;
+    border-radius: 5px;
+    text-align: center;
+    color: #42B32F;
+    margin-bottom: 30px;
+
+}
+.filter-button:hover
+{
+    font-size: 18px;
+    border: 1px solid #42B32F;
+    border-radius: 5px;
+    text-align: center;
+    color: #ffffff;
+    background-color: #42B32F;
+
+}
+.btn-default:active .filter-button:active
+{
+    background-color: #42B32F;
+    color: white;
+}
+
+.port-image
+{
+    width: 100%;
+}
+
+.gallery_product
+{
+    margin-bottom: 30px;
+}
+.faculty-heights{
+	height: 184px;
+    width: 175px;
 }
 
 
