--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@
 	    margin: 0;
 	    padding-bottom: 20px;
 	    color: #333333;
-	    font-size: 18px;
+	    font-size: 17px;
 	    text-transform: uppercase;
 	    transition: all 0.3s ease-in-out;
 	}
@@ -544,7 +544,7 @@
 	    margin-top: -100px;
 	}
 	.slider-content-bottom .sider-btm-row-inner {
-	    padding: 0 15px;
+	    padding: 0 104px;
 	}
 	.slider-content-bottom .slide_cont_box_01 {
 	    padding: 0 4px 0 0;
@@ -911,7 +911,7 @@
 	/*=======[ Index Counter Area Style ]========*/
 	
 	.counter-area {
-	    background: transparent url("../images/index/counter-bg.jpg") no-repeat center center/cover;
+	   /* background: transparent url("../images/index/counter-bg.jpg") no-repeat center center/cover;*/
 	    min-height: 500px;
 	    position: relative;
 	    padding: 100px 0;
@@ -6703,7 +6703,7 @@
 	    line-height: 35px;
 	    text-align: center;
 	    transition: all 0.4s ease 0s;
-	    width: 35px;
+	    width: 28px;
 	}
 	.t-profile-01 .teacher-prolile-01 .t-profile-left .teacher-contact ul li a:hover {
 	    box-shadow: 0 0 10px rgba(0, 0, 0, 0.13);
@@ -8200,7 +8200,7 @@
 
 .singleservice {
   display: inline-block;
-  width: 25%;
+  width: 15%;
   height: 100%;
   background-color: #f3f3f3;
   padding: 25px;
@@ -8217,7 +8217,7 @@
 
 .singleserviceb {
   display: inline-block;
-  width: 25%;
+  width: 15%;
   height: 100%;
   background-color: #f3f3f3;
   padding: 25px;
@@ -8238,9 +8238,9 @@
   }
 }
 
-h2.servicetitle{
+h6.servicetitle{
   font-family: century gothic;
-  font-size: 15pt;
+  font-size: 15px;
   font-weight: normal;
   letter-spacing: 1px;
   padding-bottom: 0px;
@@ -8250,7 +8250,7 @@ h2.servicetitle{
 }
 
 img.serviceicon {
-  width: 70%;
+  width: 50%;
   height: auto;
   display: block;
   margin-left: auto;
